sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:6: error: not found: value lgr
   var ecart = (lgr/2).toInt
                ^