sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
for(i<- 1 to (getNombreValeurs()-1))
  {var v=getValeur(i)
   var j=i
   var ecart = (lgr/2).toInt
   while(j>ecart && getValeur(j-ecart)>v){
     copie(j-ecart,j)
     j=j-ecart}
   setValeur(j,v)}
}